[package]
name = "astral"
version = "0.0.0"
edition = "2018"
authors = [ "Tim Diekmann <tim.diekmann@3dvision.de>" ]
repository = "https://github.com/astral-engine/astral"
documentation = "https://astral-engine.github.io/docs"
readme = "README.md"
publish = false

[workspace]
members = [
    "src/libcore",
    "src/libresource",
    "src/libvideo",
    "src/error"
]

[dependencies]
astral-engine = { path = "src/libengine", version = "0.0.0", default-features = false }
astral-core = { path = "src/libcore", version = "0.0.0", default-features = false }
astral-resource = { path = "src/libresource", version = "0.0.0", default-features = false }
astral-video = { path = "src/libvideo", version = "0.0.0", default-features = false }
astral-error = { path = "src/error" }

[dev-dependencies]
slog-term = "2.4"
slog-async = "2.3"
rustc_version = "0.2"

[features]
default = ["max_level_trace", "track-strings"]
track-strings = ["astral-core/track-strings"]
max_level_off = ["astral-engine/max_level_off"]
max_level_error = ["astral-engine/max_level_error"]
max_level_warn = ["astral-engine/max_level_warn"]
max_level_info = ["astral-engine/max_level_info"]
max_level_debug = ["astral-engine/max_level_debug"]
max_level_trace = ["astral-engine/max_level_trace"]
release_max_level_off = ["astral-engine/release_max_level_off"]
release_max_level_error = ["astral-engine/release_max_level_error"]
release_max_level_warn = ["astral-engine/release_max_level_warn"]
release_max_level_info = ["astral-engine/release_max_level_info"]
release_max_level_debug = ["astral-engine/release_max_level_debug"]
release_max_level_trace = ["astral-engine/release_max_level_trace"]
