[package]
name = "astral-engine"
edition = "2018"
version = "0.0.3"
authors = [ "Tim Diekmann <tim.diekmann@3dvision.de>" ]
repository = "https://github.com/astral-engine/astral"
documentation = "https://docs.rs/astral-engine/"
readme = "README.md"
license = "Apache-2.0"
keywords = ["game", "astral"]
categories = ["game-engines"]
description = "Astral Engine (WIP)"
exclude = ["assets/**"]

[lib]
name = "astral"

[badges]
travis-ci = { repository = "astral-engine/astral", branch = "master" }
maintenance = { status = "actively-developed" }


[workspace]
members = [
    "src/error",
    "src/math",
    "src/util",
    "src/string",
    "src/thirdparty"
]

[dependencies]
astral-error = { path = "src/error", version = "0.0.5" }
astral-math = { path = "src/math", version = "0.0.3" }
astral-util = { path = "src/util", version = "0.0.5" }
astral-string = { path = "src/string", version = "0.0.5" }
astral-thirdparty = { path = "src/thirdparty", version = "0.0.2" }

[dev-dependencies]
slog-term = "2.4"
slog-async = "2.3"

[features]
default = ["track-strings"]
track-strings = ["astral-string/track-strings"]
max_level_off = ["astral-thirdparty/max_level_off"]
max_level_error = ["astral-thirdparty/max_level_error"]
max_level_warn = ["astral-thirdparty/max_level_warn"]
max_level_info = ["astral-thirdparty/max_level_info"]
max_level_debug = ["astral-thirdparty/max_level_debug"]
max_level_trace = ["astral-thirdparty/max_level_trace"]
release_max_level_off = ["astral-thirdparty/release_max_level_off"]
release_max_level_error = ["astral-thirdparty/release_max_level_error"]
release_max_level_warn = ["astral-thirdparty/release_max_level_warn"]
release_max_level_info = ["astral-thirdparty/release_max_level_info"]
release_max_level_debug = ["astral-thirdparty/release_max_level_debug"]
release_max_level_trace = ["astral-thirdparty/release_max_level_trace"]
