[package]
name = "astral-core"
version = "0.0.0"
edition = "2018"
authors = [ "Tim Diekmann <tim.diekmann@3dvision.de>" ]
repository = "https://github.com/astral-engine/astral"

[dependencies]
log = "0.4"
simplelog = "0.5"
num-traits = "0.2"
either = "1.5"
arrayvec = { version = "0.4", default-features = false }
lazy_static = "1.2"

[build-dependencies]
rustc_version = "0.2"

[dev-dependencies]
astral = { path = "../../", version = "0.0.0", default-features = false }

[features]
max_level_off = ["log/max_level_off"]
max_level_error = ["log/max_level_error"]
max_level_warn = ["log/max_level_warn"]
max_level_info = ["log/max_level_info"]
max_level_debug = ["log/max_level_debug"]
max_level_trace = ["log/max_level_trace"]
release_max_level_off = ["log/release_max_level_off"]
release_max_level_error = ["log/release_max_level_error"]
release_max_level_warn = ["log/release_max_level_warn"]
release_max_level_info = ["log/release_max_level_info"]
release_max_level_debug = ["log/release_max_level_debug"]
release_max_level_trace = ["log/release_max_level_trace"]
