[package]
name = "astral-engine"
version = "0.0.0"
edition = "2018"
authors = [ "Tim Diekmann <tim.diekmann@3dvision.de>" ]
repository = "https://github.com/astral-engine/astral"

[dependencies]
slog = { version = "2.4", features = ["max_level_trace"] }

[build-dependencies]
rustc_version = "0.2"

[dev-dependencies]
astral = { path = "../../", version = "0.0.0", default-features = false }
