[package]
name = "astral-resource"
version = "0.0.0"
edition = "2018"
authors = [ "Tim Diekmann <tim.diekmann@3dvision.de>" ]
repository = "https://github.com/astral-engine/astral"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.2"

astral-core = { path = "../libcore", version = "0.0.0", default-features = false }

[build-dependencies]
rustc_version = "0.2"

[dev-dependencies]
astral = { path = "../../", version = "0.0.0", default-features = false }
