[package]
name = "astral-video"
version = "0.0.0"
edition = "2018"
authors = [ "Tim Diekmann <tim.diekmann@3dvision.de>" ]
repository = "https://github.com/astral-engine/astral"

[dependencies]
log = { version = "0.4" }

astral-core = { path = "../libcore", version = "0.0.0", default-features = false }

[build-dependencies]
rustc_version = "0.2"

[dev-dependencies]
astral = { path = "../../", version = "0.0.0", default-features = false }
