[package]
name = "astral-math"
edition = "2018"
version = "0.0.3"
authors = [ "Tim Diekmann <tim.diekmann@3dvision.de>" ]
repository = "https://github.com/astral-engine/astral"
documentation = "https://docs.rs/astral-engine/"
license = "Apache-2.0"
keywords = ["game", "math", "astral"]
categories = ["game-engines"]
description = "Math library for the Astral Engine (WIP)"

[badges]
travis-ci = { repository = "astral-engine/astral", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
num-traits = "0.2"
