[package]
name = "astral-resource"
version = "0.0.1"
# TODO(#12): Use edition = 2018
# edition = "2018"
authors = [ "Tim Diekmann <tim.diekmann@3dvision.de>" ]
repository = "https://gitlab.com/StellarBullet/astral"
readme = "README.md"
license = "GNU GPLv3"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.2"

astral-core = { path = "../core", version = "0.0.1", default-features = false }

[build-dependencies]
rustc_version = "0.2"

[dev-dependencies]
astral = { path = "../../", version = "0.0.1", default-features = false }
