[package]
name = "astral-util"
edition = "2018"
version = "0.0.5"
authors = [ "Tim Diekmann <tim.diekmann@3dvision.de>" ]
repository = "https://github.com/astral-engine/astral"
documentation = "https://docs.rs/astral-engine/"
license = "Apache-2.0"
keywords = ["game", "astral"]
categories = ["game-engines"]
description = "Utility library for the Astral Engine (WIP)"

[badges]
travis-ci = { repository = "astral-engine/astral", branch = "master" }
maintenance = { status = "actively-developed" }

[dev-dependencies]
astral-engine = { path = "../../", version = "0.0.3", default-features = false }
