[package]
name = "astral-video"
version = "0.0.1"
edition = "2018"
authors = [ "Tim Diekmann <tim.diekmann@3dvision.de>" ]
repository = "https://gitlab.com/StellarBullet/astral"
readme = "README.md"
license = "GNU GPLv3"

[dependencies]
log = { version = "0.4" }

astral-core = { path = "../core", version = "0.0.1", default-features = false }
